# Graduation-Project

./: .gitignore  README.md
AI_models/: Commands .txt  Libraries.txt  README.md  mqtt.py
Baremetal/: README.md
Baremetal/.metadata/: .log4j2.xml  version.ini
Baremetal/.metadata/.plugins/org.eclipse.cdt.core/: ADASWithSDV.1735322676805.pdom  ADASWithSDV.1735340587494.pdom  ADASWithSDV.1741304307713.pdom  ADASWithSDV.language.settings.xml  SDVWithADAS.language.settings.xml
Baremetal/.metadata/.plugins/org.eclipse.cdt.managedbuilder.core/buildState/ADASWithSDV/: ADASWithSDV
Baremetal/.metadata/.plugins/org.eclipse.cdt.ui/: dialog_settings.xml
Baremetal/.metadata/.plugins/org.eclipse.core.resources/: 14.snap  36.snap
Baremetal/.metadata/.plugins/org.eclipse.core.resources/.projects/ADASWithSDV/: .location  (+1 more)
Baremetal/.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree  10.tree  11.tree  12.tree  13.tree  14.tree  15.tree  16.tree  17.tree  2.tree  29.tree  3.tree  31.tree  32.tree  35.tree  36.tree  6.tree  7.tree
Baremetal/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
Baremetal/.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml  launchConfigurationHistory.xml
Baremetal/.metadata/.plugins/org.eclipse.e4.ui.workbench.swt/: dialog_settings.xml
Baremetal/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
Baremetal/.metadata/.plugins/org.eclipse.tm.terminal.view.ui/.executables/: data.properties
Baremetal/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
Baremetal/.metadata/.plugins/org.eclipse.ui.views.log/: dialog_settings.xml
Baremetal/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
Baremetal/.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
Baremetal/ADASWithSDV/: .cproject  .gitignore  .mxproject  .project  ADASWithSDV Debug.launch  ADASWithSDV.elf.launch  ADASWithSDV.ioc  stm32f4_flash.ld
Baremetal/ADASWithSDV/Core/Inc/: FreeRTOSConfig.h
Baremetal/ADASWithSDV/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Baremetal/ADASWithSDV/Debug/: ADASWithSDV.elf  ADASWithSDV.hex  ADASWithSDV.list  ADASWithSDV.map  makefile  objects.list  sources.mk
Baremetal/ADASWithSDV/Debug/Core/Src/: main.cyclo  main.d  main.su  stm32f4xx_it.cyclo  stm32f4xx_it.su
Baremetal/ADASWithSDV/src/: main.c  stm32f4xx_it.h  tiny_printf.c
Baremetal/ADASWithSDV/src/actuating/APP/: app.c  app.h
Baremetal/ADASWithSDV/src/communication/: communication.c  communication.h
Baremetal/ADASWithSDV/src/perception/APP/: app.c  app.h
Baremetal/ADASWithSDV/src/perception/perceptionUtils/: perceptionUtils.c  utils.c  utils.h
Baremetal/ADASWithSDV/src/perception/utils/: utils.c  utils.h
Baremetal/ADASWithSDV/src/utils/: utils.c  utils.h
ControlLayer/: README.md
DecisionMakingLayer/: README.md
Infotainment_System/: CMakeLists.txt  main.cpp
Infotainment_System/ADAS/: ADAS_Notification.cpp  ADAS_Notification.h
Infotainment_System/Communication/: Communication.cpp
Infotainment_System/UI/MainWindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Infotainment_System/UI/Start/: startwindow.cpp  startwindow.h  startwindow.ui
Infotainment_System/UI/assets/: Icons.qrc  TrafficSigns.qrc
Leda/meta-leda-bsp/conf/machine/: qemuarm64-extra.conf
Leda/meta-leda-components/recipes-sdv/eclipse-kuksa/: databroker-cli_0.17.0.bb
Leda/meta-leda-components/recipes-sdv/sdv-containers/: sdv-container-feedercan_0.1.bb
Leda/meta-leda-distro/recipes-kernel/linux/: sdv-misc-kernel-config.inc
Leda/meta-leda-distro/recipes-sdv-distro/images/: sdv-image-data.bb
Leda/rauc-keys/: rauc.key
Linux/BSD/: CMakeLists.txt  README.md  config.json  toolchain-rpi.cmake
Linux/BSD/include/: BlindSpotDetection.h  ConfigurationManager.h  LeftBlindSpotThread.h  RightBlindSpotThread.h
Linux/BSD/src/: BlindSpotDetection.cpp  ConfigurationManager.cpp  LeftBlindSpotThread.cpp  RightBlindSpotThread.cpp  main.cpp
Linux/Communication/: README.md  SPI_MQTT_communication_1.0.py  config.json
Linux/EBS/: .gitignore  CMakeLists.txt  README.md  config.json
Linux/EBS/include/: Communication.h  ConfigurationManager.h  EmergencyBrakingSystem.h
Linux/EBS/src/: Communication.cpp  ConfigurationManager.cpp  EmergencyBrakingSystem.cpp  main.cpp
Linux/Image/Leda/rauc-keys/: rauc.cert
Linux_image/: README.md
PerceptionLayer/: README.md
(+130 files in other folders)
